hphp/hack/test/sound_dynamic/typing/parent_2.bad.php.exp
File "parent_2.bad.php", line 7, characters 7-9:
Class `Bar` must implement dynamic because it extends class `Foo` which does (Typing[4402])
