hphp/hack/test/sound_dynamic/typing/parent_2.bad.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

<<__SoundDynamicCallable>>
class Foo {}

class Bar extends Foo {}
